Scrollbar fixed for chrome

--- a/public/assets/styles/Projects.scss
+++ b/public/assets/styles/Projects.scss
@@ -1,59 +1,71 @@
 .project {
-    overflow-x: scroll;
-    padding-left: 30px;
-    width: 100%;
-    position: relative;
-    scrollbar-color: rgba(0, 0, 0, 1) rgba(0, 0, 0, 0);
-    scrollbar-width: thin;
-  }
-  
-  .project__container {
-    transition: 450ms -webkit-transform;
-    transition: 450ms transform;
-    transition: 450ms transform, 450ms -webkit-transform;
-    font-size: 0;
-    white-space: nowrap;
-    margin: 13% 0 5% 0;
-    padding-bottom: 10px;
-  }
-  
-  .project__container:hover .project-item {
-    opacity: 0.3;
-  }
-  
-  .project__container:hover .project-item:hover {
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3);
-    opacity: 1;
-  }
+  overflow-x: scroll;
+  padding-left: 30px;
+  width: 100%;
+  position: relative;
+  scrollbar-color: rgba(0, 0, 0, 1) rgba(0, 0, 0, 0);
+  scrollbar-width: thin;
+}
 
-  /* 
+::-webkit-scrollbar {
+  height: 12px;
+  width: 12px;
+  background: rgba(0, 0, 0, 1) rgba(0, 0, 0, 0);
+  width: thin;
+}
+
+::-webkit-scrollbar-thumb {
+  background: black;
+  -webkit-border-radius: 1ex;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+  background: #000;
+}
+
+.project__container {
+  transition: 450ms -webkit-transform;
+  transition: 450ms transform;
+  transition: 450ms transform, 450ms -webkit-transform;
+  font-size: 0;
+  white-space: nowrap;
+  margin: 13% 0 5% 0;
+  padding-bottom: 10px;
+}
+
+.project__container:hover .project-item {
+  opacity: 0.3;
+}
+
+.project__container:hover .project-item:hover {
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
+  opacity: 1;
+}
+
+/* 
   ##Device = Tablets, Ipads (portrait)
   ##Screen = B/w 767px to 1024px
 */
 
 @media (min-width: 767px) and (max-width: 1024px) {
-  
-    .project__container {
-        margin-top: 20%;
-        margin-bottom: 10%;
-        padding-bottom: 10px;
-      }
-    
+  .project__container {
+    margin-top: 20%;
+    margin-bottom: 10%;
+    padding-bottom: 10px;
+  }
 }
-  
-  /* 
+
+/* 
   ##Device = Low Resolution Tablets, Mobiles (Portrait)
   ##Screen = B/w 375px to 766px
 */
 
 @media (min-width: 350px) and (max-width: 766px) {
-  
-    .project__container {
-        margin-top: 40%;
-        margin-bottom: 20%;
-        padding-bottom: 10px;
-      }
-    
+  .project__container {
+    margin-top: 40%;
+    margin-bottom: 20%;
+    padding-bottom: 10px;
+  }
 }
-  
